add a defaults front matter for images/masonry

--- a/_config.yml
+++ b/_config.yml
@@ -28,6 +28,12 @@ markdown: kramdown
 theme: minima
 plugins:
 
+defaults:
+  - scope:
+      path: "assets/images/masonry"
+    values:
+      image: true
+
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
