--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,7 @@ description: > # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 assets: "/assets"
+images: "/assets/images"
 
 # Build settings
 markdown: kramdown
