--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -16,8 +16,8 @@
   sublinks:
     - page: Call for Scores
       url: /projects/call-for-scores/index.html
-    - page: Residencies
-      url: /projects/residencies.html
+    - page: Events
+      url: /projects/events/index.html
 
 - title: Media
   sublinks:
