--- a/_data/donors.yml
+++ b/_data/donors.yml
@@ -44,6 +44,7 @@
     - ​Anonymous (1)
     - Eastman School of Music
     - ​Mary Collins
+    - Steven Takasugi
 
 - name: Three-Pole
   amountStart: 100
@@ -61,6 +62,7 @@
   amountStart: 50
   amountEnd: 99
   individuals:
+    - Anonymous (1)
     - ​The Glassey Family
     - Peter Kalal
     - Rand Steiger and Rebecca Plant
@@ -82,4 +84,4 @@
   amountStart: 1
   amountEnd: 24
   individuals:
-    - Anonymous (1)
+    - Anonymous (2)
