remove events listing

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -16,8 +16,8 @@
   sublinks:
     - page: Call for Scores
       url: /projects/call-for-scores/
-    - page: Events
-      url: /projects/events/
+    # - page: Events
+      # url: /projects/events/
 
 - title: Media
   url: /media/
