--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,9 @@ theme: minima
 plugins:
   - jekyll-paginate
 
+# shows posts/concerts with a future date
+future: true
+
 defaults:
   - scope:
       path: "assets/images/auto-add"
