updates to get my dev system running

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 _site
+.DS_Store
 .sass-cache
 .jekyll-metadata
+.jekyll-cache
 core-index.html
 assets/images/core-index
 assets/images/favicons/switch-favicon.docx
