--- a/_data/members.yml
+++ b/_data/members.yml
@@ -1,5 +1,5 @@
 - name: Megan Arns
-  title:
+  title: Production Director
   role: Percussion
   headshot: megan.jpg
   links:
@@ -9,7 +9,7 @@
     - twitter:
 
 - name: Christopher Chandler
-  title: Executive Director
+  title: Finance Director, Co-Founder
   role: Composer and Sound Engineer
   headshot: chris.jpg
   links:
@@ -29,7 +29,7 @@
     - twitter:
 
 - name: Zach Sheets
-  title:
+  title: Managing Director
   role: Composer and Flutes
   headshot: zach.jpg
   links:
@@ -39,7 +39,7 @@
     - twitter:
 
 - name: Jason Thorpe Buchanan
-  title: Artistic Director
+  title: Artistic Director, Co-Founder
   role: Composer and Sound Engineer
   headshot: jason.jpg
   links:
