--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ core-index.html
 assets/images/core-index
 assets/images/favicons/switch-favicon.docx
 _includes/off-canvas-sidebar.html
+**/.DS_Store
