--- a/_data/members.yml
+++ b/_data/members.yml
@@ -51,7 +51,7 @@
 - name: Madison Greenstone
   title:
   role: Clarinets
-  headshot: madison.jpg
+  headshot: madison_1200x800.jpg
   links:
     - email: madison.greenstone@yahoo.com
     - website: https://madison-greenstone.com/
@@ -71,7 +71,7 @@
 - name: Lauren Cauley
   title:
   role: Violin
-  headshot: lauren.jpg
+  headshot: lauren_1200x800.jpg
   links:
     - email: cauley.lauren@gmail.com
     - website: http://www.laurencauley.com/
